14094
I can't see how this hasn't been noticed before, but...
```scala
object Foo { private def bar(): Int = 55 }
class Foo(x: Int) { def this() = this(Foo.bar()) }
```
```scala
scalac28 a.scala 
a.scala:2: error: method bar cannot be accessed in object Foo
class Foo(x: Int) { def this() = this(Foo.bar()) }
                                          ^
one error found
```
